--- a/src/main/resources/languages/exitDialog_fr_FR.properties
+++ b/src/main/resources/languages/exitDialog_fr_FR.properties
@@ -4,7 +4,7 @@ exit.message=Êtes-vous sûr de vouloir quitter?
 yesButton=Oui
 cancelButton=dos
 
-settings.language=Langue
+settings.language=Changer de langue
 settings.language.selected=Français
 settings.language.english=Anglais
 settings.language.norwegian=Norvégien
