--- a/src/main/resources/languages/exitDialog_no_NO.properties
+++ b/src/main/resources/languages/exitDialog_no_NO.properties
@@ -4,7 +4,7 @@ exit.message=Er du sikker på at du vil avslutte?
 yesButton=Ja
 cancelButton=Tilbake
 
-settings.language=Språk
+settings.language=Endre Språk
 settings.language.selected=Norsk
 settings.language.english=Engelsk
 settings.language.norwegian=Norsk
