--- a/src/main/resources/languages/exitDialog_en_US.properties
+++ b/src/main/resources/languages/exitDialog_en_US.properties
@@ -3,7 +3,7 @@ exit.message=Are you sure you want to exit?
 yesButton=Yes
 cancelButton=Back
 
-settings.language=Language
+settings.language=Change Language
 settings.language.selected=English
 settings.language.english=English
 settings.language.norwegian=Norwegian
