Added A newGame menu to chose if you wanna make a newgmae or creat a new story

--- a/src/main/resources/languages/exitDialog.properties
+++ b/src/main/resources/languages/exitDialog.properties
@@ -20,3 +20,9 @@ menu.newGame=null
 menu.loadGame=null
 menu.settings=null
 menu.exitGame=null
+
+newGameDialogTitle=null
+newGameHeaderText=null
+playNewStoryButton=null
+createStoryButton=null
+backToMainMenuButton=null
