--- a/src/main/resources/languages/exitDialog_en.properties
+++ b/src/main/resources/languages/exitDialog_en.properties
@@ -19,3 +19,8 @@ menu.newGame=NewGame
 menu.loadGame=LoadGame
 menu.settings=Settings
 menu.exitGame=Quit
+
+newGameHeaderText=New Game
+playNewStoryButton=Play a Story
+createStoryButton=Make a Story
+backToMainMenuButton=Back
