--- a/src/main/resources/languages/exitDialog_no_NO.properties
+++ b/src/main/resources/languages/exitDialog_no_NO.properties
@@ -12,7 +12,7 @@ settings.language.french=Fransk
 
 settings.volume=Volum
 settings.mute=Lyd
-settings.muteLable=Av/PÅ
+settings.muteLable=Av/På
 settings.save=Lagre
 settings.cancel=Tilbake
 
@@ -20,3 +20,8 @@ menu.newGame=Nytt Spill
 menu.loadGame=Fortsett Spill
 menu.settings=Instillinger
 menu.exitGame=Avslutt
+
+newGameHeaderText= Nytt Spill
+playNewStoryButton=Spill en Historie
+createStoryButton=Lag en Historie
+backToMainMenuButton=Tilbake
