added createStoryView and made it so you can go from another Scene to another in the same window, but i get a nullpointer bug, so need to be fixed in next commit

--- a/src/main/resources/languages/exitDialog_en.properties
+++ b/src/main/resources/languages/exitDialog_en.properties
@@ -24,3 +24,8 @@ newGameHeaderText=New Game
 playNewStoryButton=Play a Story
 createStoryButton=Make a Story
 backToMainMenuButton=Back
+
+loadGameTableName=Story
+loadGameTableDate=Last Time Played
+loadGameTablePlayer=Player
+loadGameButton=Load
