--- a/src/main/resources/languages/exitDialog_fr_FR.properties
+++ b/src/main/resources/languages/exitDialog_fr_FR.properties
@@ -20,3 +20,13 @@ menu.newGame=Nouveau jeu
 menu.loadGame=Chargement du jeu
 menu.settings=Paramètres
 menu.exitGame=Quitter le jeu
+
+newGameHeaderText= Nouveau jeu
+playNewStoryButton=Jouer une histoire
+createStoryButton=Faire une histoire
+backToMainMenuButton=Dos
+
+loadGameTableName=Histoire
+loadGameTableDate=La dernière fois que vous avez joué
+loadGameTablePlayer=Joueur
+loadGameButton=Charger
