--- a/src/main/resources/languages/exitDialog_no_NO.properties
+++ b/src/main/resources/languages/exitDialog_no_NO.properties
@@ -25,3 +25,8 @@ newGameHeaderText= Nytt Spill
 playNewStoryButton=Spill en Historie
 createStoryButton=Lag en Historie
 backToMainMenuButton=Tilbake
+
+loadGameTableName=Histore
+loadGameTableDate=Sist Spilt
+loadGameTablePlayer=Spiller Navn
+loadGameButton=Last Inn
