--- a/src/main/resources/languages/exitDialog_en_US.properties
+++ b/src/main/resources/languages/exitDialog_en_US.properties
@@ -19,3 +19,8 @@ menu.newGame=NewGame
 menu.loadGame=LoadGame
 menu.settings=Settings
 menu.exitGame=Quit
+
+loadGameTableName=Story
+loadGameTableDate=Last Time Played
+loadGameTablePlayer=Player
+loadGameButton=Load
