refactor of logic in frontend with MVC design in mind, this is a big commit with all changes.

--- a/src/main/resources/languages/exitDialog.properties
+++ b/src/main/resources/languages/exitDialog.properties
@@ -1,8 +1,8 @@
 # Default
 exit.title=Exit application
 exit.message=Are you sure you want to exit?
-yesButton=Yes
-cancelButton=Back
+exit.confirmButton=Yes
+exit.cancelButton=Back
 
 settings.language=null
 settings.language.selected=null
