--- a/src/main/resources/languages/exitDialog_fr_FR.properties
+++ b/src/main/resources/languages/exitDialog_fr_FR.properties
@@ -1,8 +1,8 @@
 # French
 exit.title=Quitter la candidature
 exit.message=Êtes-vous sûr de vouloir quitter?
-yesButton=Oui
-cancelButton=dos
+exit.confirmButton=Oui
+exit.cancelButton=Retour
 
 settings.language=Changer de langue
 settings.language.selected=Français
@@ -24,7 +24,7 @@ menu.exitGame=Quitter le jeu
 newGameHeaderText= Nouveau jeu
 playNewStoryButton=Jouer une histoire
 createStoryButton=Faire une histoire
-backToMainMenuButton=Dos
+backToMainMenuButton=Retour
 
 loadGameTableName=Histoire
 loadGameTableDate=La dernière fois que vous avez joué
