--- a/src/main/resources/languages/exitDialog_no_NO.properties
+++ b/src/main/resources/languages/exitDialog_no_NO.properties
@@ -1,8 +1,8 @@
 # norwegian
 exit.title=Avslutt applikasjon
 exit.message=Er du sikker på at du vil avslutte?
-yesButton=Ja
-cancelButton=Tilbake
+exit.confirmButton=Ja
+exit.cancelButton=Tilbake
 
 settings.language=Endre Språk
 settings.language.selected=Norsk
