--- a/src/main/resources/languages/exitDialog_en_US.properties
+++ b/src/main/resources/languages/exitDialog_en_US.properties
@@ -1,7 +1,7 @@
 exit.title=Exit application
 exit.message=Are you sure you want to exit?
-yesButton=Yes
-cancelButton=Back
+exit.confirmButton=Yes
+exit.cancelButton=Back
 
 settings.language=Change Language
 settings.language.selected=English
