huge refactor to resorce bundels also adding Story to database and doing some method for information

--- a/src/main/resources/languages/exitDialog_fr_FR.properties
+++ b/src/main/resources/languages/exitDialog_fr_FR.properties
@@ -4,29 +4,10 @@ exit.message=Êtes-vous sûr de vouloir quitter?
 exit.confirmButton=Oui
 exit.cancelButton=Retour
 
-settings.language=Changer de langue
-settings.language.selected=Français
-settings.language.english=Anglais
-settings.language.norwegian=Norvégien
-settings.language.french=Français
-
-settings.volume=Volume
-settings.mute=Muette
-settings.muteLable=SUR/DÉSACTIVÉ
-settings.save=Sauvegarder
-settings.cancel=Annuler
-
-menu.newGame=Nouveau jeu
-menu.loadGame=Chargement du jeu
-menu.settings=Paramètres
-menu.exitGame=Quitter le jeu
-
-newGameHeaderText= Nouveau jeu
-playNewStoryButton=Jouer une histoire
-createStoryButton=Faire une histoire
-backToMainMenuButton=Retour
-
-loadGameTableName=Histoire
-loadGameTableDate=La dernière fois que vous avez joué
-loadGameTablePlayer=Joueur
-loadGameButton=Charger
+newStoryView.tableName=null
+newStoryView.tablePassageAmount=null
+newStoryView.tableLinkAmount=null
+newStoryView.newStoryButton=null
+newStoryView.editStoryButton=null
+newStoryView.loadStoryButton=null
+newStoryView.backButton=null
