--- a/src/main/resources/languages/exitDialog.properties
+++ b/src/main/resources/languages/exitDialog.properties
@@ -4,34 +4,18 @@ exit.message=Are you sure you want to exit?
 exit.confirmButton=Yes
 exit.cancelButton=Back
 
-settings.language=null
-settings.language.selected=null
-settings.language.english=null
-settings.language.norwegian=null
-settings.language.french=null
-settings.volume=null
-settings.mute=null
-settings.muteLable=null
-settings.save=null
-settings.cancel=null
-
-menu.newGame=null
-menu.loadGame=null
-menu.settings=null
-menu.exitGame=null
-
 newGameDialogTitle=null
 newGameHeaderText=null
 playNewStoryButton=null
 createStoryButton=null
 backToMainMenuButton=null
 
-loadGameTableName=null
-loadGameTableDate=null
-loadGameTablePlayer=null
-loadGameButton=null
 
-createStoryTitle=null
-addSectionButton=null
-saveButton=null
-saveDialogTitle=null
+
+newStoryView.tableName=null
+newStoryView.tablePassageAmount=null
+newStoryView.tableLinkAmount=null
+newStoryView.newStoryButton=null
+newStoryView.editStoryButton=null
+newStoryView.loadStoryButton=null
+newStoryView.backButton=null
