--- a/src/main/resources/languages/exitDialog_en.properties
+++ b/src/main/resources/languages/exitDialog_en.properties
@@ -3,29 +3,10 @@ exit.message=Are you sure you want to exit?
 exit.confirmButton=Yes
 exit.cancelButton=Back
 
-settings.language=Change Language
-settings.language.selected=English
-settings.language.english=English
-settings.language.norwegian=Norwegian
-settings.language.french=French
-
-settings.volume=Volume
-settings.mute=Mute
-settings.muteLable=On/Off
-settings.save=Save
-settings.cancel=Cancel
-
-menu.newGame=NewGame
-menu.loadGame=LoadGame
-menu.settings=Settings
-menu.exitGame=Quit
-
-newGameHeaderText=New Game
-playNewStoryButton=Play a Story
-createStoryButton=Make a Story
-backToMainMenuButton=Back
-
-loadGameTableName=Story
-loadGameTableDate=Last Time Played
-loadGameTablePlayer=Player
-loadGameButton=Load
+newStoryView.tableName=null
+newStoryView.tablePassageAmount=null
+newStoryView.tableLinkAmount=null
+newStoryView.newStoryButton=null
+newStoryView.editStoryButton=null
+newStoryView.loadStoryButton=null
+newStoryView.backButton=null
