added german and doing some refactoring in bundels and frontend view

--- a/src/main/resources/languages/settingsDialog.properties
+++ b/src/main/resources/languages/settingsDialog.properties
@@ -3,6 +3,7 @@ settings.language.selected=null
 settings.language.english=null
 settings.language.norwegian=null
 settings.language.french=null
+settings.language.german=null
 settings.volume=null
 settings.mute=null
 settings.muteLable=null
