--- a/src/main/resources/languages/settingsDialog_fr_FR.properties
+++ b/src/main/resources/languages/settingsDialog_fr_FR.properties
@@ -3,6 +3,7 @@ settings.language.selected=Français
 settings.language.english=Anglais
 settings.language.norwegian=Norvégien
 settings.language.french=Français
+settings.language.german=Allemand
 
 settings.volume=Volume
 settings.mute=Muette
