--- a/src/main/resources/languages/settingsDialog_no_NO.properties
+++ b/src/main/resources/languages/settingsDialog_no_NO.properties
@@ -3,6 +3,7 @@ settings.language.selected=Norsk
 settings.language.english=Engelsk
 settings.language.norwegian=Norsk
 settings.language.french=Fransk
+settings.language.german=Tysk
 
 settings.volume=Volum
 settings.mute=Lyd
