--- a/src/main/resources/languages/settingsDialog_en_US.properties
+++ b/src/main/resources/languages/settingsDialog_en_US.properties
@@ -3,6 +3,7 @@ settings.language.selected=English
 settings.language.english=English
 settings.language.norwegian=Norwegian
 settings.language.french=French
+settings.language.german=German
 
 settings.volume=Volume
 settings.mute=Mute
