Removed semicolons form resource bundles for StartNewGameView

--- a/src/main/resources/languages/startNewGameView.properties
+++ b/src/main/resources/languages/startNewGameView.properties
@@ -1,7 +1,7 @@
-startNewGame.story=null;
-startNewGame.player=null;
-startNewGame.name=null;
-startNewGame.class=null;
-startNewGame.goals=null;
-startNewGame.start=null;
-startNewGame.back=null;
+startNewGame.story=null
+startNewGame.player=null
+startNewGame.name=null
+startNewGame.class=null
+startNewGame.goals=null
+startNewGame.start=null
+startNewGame.back=null
