--- a/src/main/resources/languages/startNewGameView_en.properties
+++ b/src/main/resources/languages/startNewGameView_en.properties
@@ -1,7 +1,7 @@
-startNewGame.story=Story;
-startNewGame.player=Player;
-startNewGame.name=Name;
-startNewGame.class=Class;
-startNewGame.goals=Goals;
-startNewGame.start=Start;
-startNewGame.back=Back;
+startNewGame.story=Story
+startNewGame.player=Player
+startNewGame.name=Name
+startNewGame.class=Class
+startNewGame.goals=Goals
+startNewGame.start=Start
+startNewGame.back=Back
