--- a/src/main/resources/languages/startNewGameView_de_DE.properties
+++ b/src/main/resources/languages/startNewGameView_de_DE.properties
@@ -1,7 +1,7 @@
-startNewGame.story=Geschichte;
-startNewGame.player=Spieler;
-startNewGame.name=Name;
-startNewGame.class=Klasse;
-startNewGame.goals=Ziele;
-startNewGame.start=Start;
-startNewGame.back=Zurück;
+startNewGame.story=Geschichte
+startNewGame.player=Spieler
+startNewGame.name=Name
+startNewGame.class=Klasse
+startNewGame.goals=Ziele
+startNewGame.start=Start
+startNewGame.back=Zurück
