--- a/src/main/resources/languages/startNewGameView_no_NO.properties
+++ b/src/main/resources/languages/startNewGameView_no_NO.properties
@@ -1,7 +1,7 @@
-startNewGame.story=Historie;
-startNewGame.player=Spiller;
-startNewGame.name=Navn;
-startNewGame.class=Klasse;
-startNewGame.goals=Mål;
-startNewGame.start=Start;
-startNewGame.back=Tilbake;
+startNewGame.story=Historie
+startNewGame.player=Spiller
+startNewGame.name=Navn
+startNewGame.class=Klasse
+startNewGame.goals=Mål
+startNewGame.start=Start
+startNewGame.back=Tilbake
