Added the goals to resource bundles for StartNewGameView

--- a/src/main/resources/languages/startNewGameView.properties
+++ b/src/main/resources/languages/startNewGameView.properties
@@ -3,5 +3,9 @@ startNewGame.player=null
 startNewGame.name=null
 startNewGame.class=null
 startNewGame.goals=null
+startNewGame.health=null
+startNewGame.gold=null
+startNewGame.inventory=null
+startNewGame.score=null
 startNewGame.start=null
 startNewGame.back=null
