--- a/src/main/resources/languages/startNewGameView_fr_FR.properties
+++ b/src/main/resources/languages/startNewGameView_fr_FR.properties
@@ -3,5 +3,9 @@ startNewGame.player=Joueur
 startNewGame.name=Nom
 startNewGame.class=Classe
 startNewGame.goals=Objectifs
+startNewGame.health=Santé
+startNewGame.gold=Or
+startNewGame.inventory=Inventaire
+startNewGame.score=Score
 startNewGame.start=Démarrer
 startNewGame.back=Retour
