--- a/src/main/resources/languages/startNewGameView_de_DE.properties
+++ b/src/main/resources/languages/startNewGameView_de_DE.properties
@@ -3,5 +3,9 @@ startNewGame.player=Spieler
 startNewGame.name=Name
 startNewGame.class=Klasse
 startNewGame.goals=Ziele
+startNewGame.health=Gesundheit
+startNewGame.gold=Gold
+startNewGame.inventory=Inventar
+startNewGame.score=Punkte
 startNewGame.start=Start
 startNewGame.back=Zurück
