--- a/src/main/resources/languages/startNewGameView_en_US.properties
+++ b/src/main/resources/languages/startNewGameView_en_US.properties
@@ -3,5 +3,9 @@ startNewGame.player=Player
 startNewGame.name=Name
 startNewGame.class=Class
 startNewGame.goals=Goals
+startNewGame.health=Health
+startNewGame.gold=Gold
+startNewGame.inventory=Inventory
+startNewGame.score=Score
 startNewGame.start=Start
 startNewGame.back=Back
