--- a/src/main/resources/languages/startNewGameView_no_NO.properties
+++ b/src/main/resources/languages/startNewGameView_no_NO.properties
@@ -3,5 +3,9 @@ startNewGame.player=Spiller
 startNewGame.name=Navn
 startNewGame.class=Klasse
 startNewGame.goals=Mål
+startNewGame.health=Helse
+startNewGame.gold=Gull
+startNewGame.inventory=Inventar
+startNewGame.score=Poeng
 startNewGame.start=Start
 startNewGame.back=Tilbake
