Added class types to resource bundles for StartNewGameView

--- a/src/main/resources/languages/startNewGameView_de_DE.properties
+++ b/src/main/resources/languages/startNewGameView_de_DE.properties
@@ -2,6 +2,10 @@ startNewGame.story=Geschichte
 startNewGame.player=Spieler
 startNewGame.name=Name
 startNewGame.class=Klasse
+startNewGame.classType.mage=Magier
+startNewGame.classType.rogue=Schurke
+startNewGame.classType.warrior=Krieger
+startNewGame.classType.ranger=Bogenschütze
 startNewGame.goals=Ziele
 startNewGame.health=Gesundheit
 startNewGame.gold=Gold
