--- a/src/main/resources/languages/startNewGameView_fr_FR.properties
+++ b/src/main/resources/languages/startNewGameView_fr_FR.properties
@@ -2,6 +2,10 @@ startNewGame.story=Histoire
 startNewGame.player=Joueur
 startNewGame.name=Nom
 startNewGame.class=Classe
+startNewGame.classType.mage=Mage
+startNewGame.classType.rogue=Voleur
+startNewGame.classType.warrior=Guerrier
+startNewGame.classType.ranger=Archer
 startNewGame.goals=Objectifs
 startNewGame.health=Santé
 startNewGame.gold=Or
