--- a/src/main/resources/languages/startNewGameView_no_NO.properties
+++ b/src/main/resources/languages/startNewGameView_no_NO.properties
@@ -2,6 +2,10 @@ startNewGame.story=Historie
 startNewGame.player=Spiller
 startNewGame.name=Navn
 startNewGame.class=Klasse
+startNewGame.classType.mage=Magiker
+startNewGame.classType.rogue=Tyv
+startNewGame.classType.warrior=Kriger
+startNewGame.classType.ranger=Bueskytter
 startNewGame.goals=Mål
 startNewGame.health=Helse
 startNewGame.gold=Gull
