--- a/src/main/resources/languages/startNewGameView.properties
+++ b/src/main/resources/languages/startNewGameView.properties
@@ -2,6 +2,10 @@ startNewGame.story=null
 startNewGame.player=null
 startNewGame.name=null
 startNewGame.class=null
+startNewGame.classType.mage=null
+startNewGame.classType.rogue=null
+startNewGame.classType.warrior=null
+startNewGame.classType.ranger=null
 startNewGame.goals=null
 startNewGame.health=null
 startNewGame.gold=null
