--- a/src/main/resources/languages/startNewGameView_en_US.properties
+++ b/src/main/resources/languages/startNewGameView_en_US.properties
@@ -2,6 +2,10 @@ startNewGame.story=Story
 startNewGame.player=Player
 startNewGame.name=Name
 startNewGame.class=Class
+startNewGame.classType.mage=Mage
+startNewGame.classType.rogue=Rogue
+startNewGame.classType.warrior=Warrior
+startNewGame.classType.ranger=Ranger
 startNewGame.goals=Goals
 startNewGame.health=Health
 startNewGame.gold=Gold
