Change to loadGameDialog resource bundle

--- a/src/main/resources/languages/loadGameDialog_de_DE.properties
+++ b/src/main/resources/languages/loadGameDialog_de_DE.properties
@@ -1,5 +1,5 @@
 loadGameTableName=Geschichte
-loadGameTableDate=Letztes Mal gespielt
+loadGameTableDate=Zeit des Speicherns
 loadGameTablePlayer=Spieler
 loadGameButton=Laden
 backToMainMenuButton=Zurück
