--- a/src/main/resources/languages/loadGameDialog_fr_FR.properties
+++ b/src/main/resources/languages/loadGameDialog_fr_FR.properties
@@ -1,5 +1,5 @@
 loadGameTableName=Histoire
-loadGameTableDate=La dernière fois que vous avez joué
+loadGameTableDate=Heure de sauvegarde
 loadGameTablePlayer=Joueur
 loadGameButton=Charger
 backToMainMenuButton=qui
