--- a/src/main/resources/languages/loadGameDialog_no_NO.properties
+++ b/src/main/resources/languages/loadGameDialog_no_NO.properties
@@ -1,5 +1,5 @@
 loadGameTableName=Histore
-loadGameTableDate=Sist Spilt
+loadGameTableDate=Tidspunkt på lagring
 loadGameTablePlayer=Spiller Navn
 loadGameButton=Last Inn
 backToMainMenuButton=Tilbake
