--- a/src/main/resources/languages/loadGameDialog_en_US.properties
+++ b/src/main/resources/languages/loadGameDialog_en_US.properties
@@ -1,5 +1,5 @@
 loadGameTableName=Story
-loadGameTableDate=Last Time Played
+loadGameTableDate=Time of Save
 loadGameTablePlayer=Player
 loadGameButton=Load
 backToMainMenuButton=Back
