added the rest of the languages

--- a/src/main/resources/languages/saveGameDialog_en.properties
+++ b/src/main/resources/languages/saveGameDialog_en.properties
@@ -1,5 +1,5 @@
 saveGameTableName=Name
 saveGameTableDate=Date
 saveGameTablePlayer=Player
-backToMainMenuButton=Back to Main Menu
+backToMainMenuButton=Back to Menu
 saveGameButton=Save Game
