--- a/src/main/resources/languages/createStoryView_no_NO.properties
+++ b/src/main/resources/languages/createStoryView_no_NO.properties
@@ -3,5 +3,5 @@ newStoryView.tablePassageAmount=Antall passasjer i historien
 newStoryView.tableLinkAmount=Antall koblinger i historien
 newStoryView.newStoryButton=Ny historie
 newStoryView.editStoryButton=Rediger historie
-newStoryView.loadStoryButton=Last inn historie
+newStoryView.loadStoryButton=Importer historie
 newStoryView.backButton=Tilbake
