--- a/src/main/resources/languages/createStoryView_de_DE.properties
+++ b/src/main/resources/languages/createStoryView_de_DE.properties
@@ -1,6 +1,7 @@
-createNewStory.windowName=Neue Geschichte erstellen
-createNewStory.labelTitle=Geschichtenname
-createNewStory.labelOpeningPassage=Eröffnungspassage in der Geschichte
-createNewStory.labelPassageContent=Inhalt in der Passage
-createNewStory.confirmButton=Bestätigen
-createNewStory.backButton=Abbrechen
+newStoryView.tableName=Geschichtsname
+newStoryView.tablePassageAmount=Anzahl der Abschnitte in der Geschichte
+newStoryView.tableLinkAmount=Anzahl der Verknüpfungen in der Geschichte
+newStoryView.newStoryButton=Neue Geschichte
+newStoryView.editStoryButton=Geschichte bearbeiten
+newStoryView.loadStoryButton=Geschichte importieren
+newStoryView.backButton=Zurück
