--- a/src/main/resources/languages/createStoryView_en_US.properties
+++ b/src/main/resources/languages/createStoryView_en_US.properties
@@ -3,5 +3,5 @@ newStoryView.tablePassageAmount=Passage Amount in Story
 newStoryView.tableLinkAmount=Link Amounts in Story
 newStoryView.newStoryButton=New Story
 newStoryView.editStoryButton=Edit Story
-newStoryView.loadStoryButton=Load Story
+newStoryView.loadStoryButton=Import Story
 newStoryView.backButton=Back
