--- a/src/main/resources/languages/createStoryView_fr_FR.properties
+++ b/src/main/resources/languages/createStoryView_fr_FR.properties
@@ -3,5 +3,5 @@ newStoryView.tablePassageAmount=Nombre de passages dans l'histoire
 newStoryView.tableLinkAmount=Nombre de liens dans l'histoire
 newStoryView.newStoryButton=Nouvelle histoire
 newStoryView.editStoryButton=Modifier l'histoire
-newStoryView.loadStoryButton=Charger l'histoire
+newStoryView.loadStoryButton=histoire importée
 newStoryView.backButton=Retour
