Change to editStoryView resource bundles

--- a/src/main/resources/languages/editStoryView_de_DE.properties
+++ b/src/main/resources/languages/editStoryView_de_DE.properties
@@ -4,7 +4,7 @@ addActionButton=Aktion hinzufügen
 editButton=Bearbeiten
 deleteButton=Löschen
 mapButton=Karte
-saveButton=Speichern
+exportButton=Export
 backButton=Zurück
 passageTableColumn=Passagenname
 linkTableLinkNameColumn=Linkname
