--- a/src/main/resources/languages/editStoryView_fr_FR.properties
+++ b/src/main/resources/languages/editStoryView_fr_FR.properties
@@ -4,7 +4,7 @@ addActionButton=Ajouter une action
 editButton=Modifier
 deleteButton=Supprimer
 mapButton=Carte
-saveButton=Sauvegarder
+exportButton=Exportation
 backButton=Retour
 passageTableColumn=Nom du passage
 linkTableLinkNameColumn=Nom du lien
