--- a/src/main/resources/languages/editStoryView_no_NO.properties
+++ b/src/main/resources/languages/editStoryView_no_NO.properties
@@ -4,7 +4,7 @@ addActionButton=Legg til handling
 editButton=Rediger
 deleteButton=Slett
 mapButton=Kart
-saveButton=Lagre
+exportButton=Eksporter
 backButton=Tilbake
 passageTableColumn=Passasjenavn
 linkTableLinkNameColumn=Lenkenavn
