--- a/src/main/resources/languages/editStoryView.properties
+++ b/src/main/resources/languages/editStoryView.properties
@@ -4,7 +4,7 @@ addActionButton=null
 editButton=null
 deleteButton=null
 mapButton=null
-saveButton=null
+exportButton=null
 backButton=null
 passageTableColumn=null
 linkTableLinkNameColumn=null
