--- a/src/main/resources/languages/editStoryView_en_US.properties
+++ b/src/main/resources/languages/editStoryView_en_US.properties
@@ -4,7 +4,7 @@ addActionButton=Add action
 editButton=Edit
 deleteButton=Delete
 mapButton=Map
-saveButton=Save
+exportButton=Export
 backButton=Back
 passageTableColumn=Passage Name
 linkTableLinkNameColumn=Link Name
