added bundels for all alerts, added costum alerts fixed some bugs

--- a/src/main/resources/languages/createStoryView.properties
+++ b/src/main/resources/languages/createStoryView.properties
@@ -5,3 +5,6 @@ newStoryView.newStoryButton=null
 newStoryView.editStoryButton=null
 newStoryView.loadStoryButton=null
 newStoryView.backButton=null
+
+error_select_story=null
+error=null
