--- a/src/main/resources/languages/createStoryView_de_DE.properties
+++ b/src/main/resources/languages/createStoryView_de_DE.properties
@@ -4,3 +4,6 @@ createNewStory.labelOpeningPassage=Eröffnungspassage in der Geschichte
 createNewStory.labelPassageContent=Inhalt in der Passage
 createNewStory.confirmButton=Bestätigen
 createNewStory.backButton=Abbrechen
+
+error_select_story=Bitte wählen Sie eine Geschichte aus, um sie zu bearbeiten.
+error=Fehler
