--- a/src/main/resources/languages/createStoryView_en.properties
+++ b/src/main/resources/languages/createStoryView_en.properties
@@ -5,3 +5,6 @@ newStoryView.newStoryButton=New Story
 newStoryView.editStoryButton=Edit Story
 newStoryView.loadStoryButton=Load Story
 newStoryView.backButton=Back
+
+error_select_story=Please Select a Story To Edit It.
+error=Error
