--- a/src/main/resources/languages/createStoryView_fr_FR.properties
+++ b/src/main/resources/languages/createStoryView_fr_FR.properties
@@ -5,3 +5,6 @@ newStoryView.newStoryButton=Nouvelle histoire
 newStoryView.editStoryButton=Modifier l'histoire
 newStoryView.loadStoryButton=Charger l'histoire
 newStoryView.backButton=Retour
+
+error_select_story=Veuillez sélectionner une histoire pour la modifier.
+error=Erreur
