--- a/src/main/resources/languages/editStoryView.properties
+++ b/src/main/resources/languages/editStoryView.properties
@@ -11,3 +11,15 @@ linkTableLinkNameColumn=null
 linkTableLinkReferenceColumn=null
 actionTableColumn=null
 actionTableActionColumn=null
+
+selectPassageToAddLink=null
+selectLinkToAddAction=null
+selectPassageOrLinkOrActionToEdit=null
+warning=null
+confirmation=null
+
+title=null
+description=null
+areYouSurePassage=null
+areYouSureLink=null
+areYouSureAction=null
