--- a/src/main/resources/languages/editStoryView_de_DE.properties
+++ b/src/main/resources/languages/editStoryView_de_DE.properties
@@ -11,3 +11,15 @@ linkTableLinkNameColumn=Linkname
 linkTableLinkReferenceColumn=Linkreferenz
 actionTableColumn=Aktionsname
 actionTableActionColumn=Aktion
+
+selectPassageToAddLink=Sie müssen eine Passage auswählen, um einen Link hinzuzufügen.
+selectLinkToAddAction=Sie müssen einen Link auswählen, um eine Aktion hinzuzufügen.
+selectPassageOrLinkOrActionToEdit=Sie müssen eine Passage, einen Link oder eine Aktion auswählen, um sie zu bearbeiten.
+warning=Warnung
+confirmation=Bestätigung
+
+title=Titel:
+description=Beschreibung:
+areYouSurePassage=Sind Sie sicher, dass Sie diese Passage löschen möchten?
+areYouSureLink=Sind Sie sicher, dass Sie diesen Link löschen möchten?
+areYouSureAction=Sind Sie sicher, dass Sie diese Aktion löschen möchten?
