--- a/src/main/resources/languages/editStoryView_fr_FR.properties
+++ b/src/main/resources/languages/editStoryView_fr_FR.properties
@@ -11,3 +11,15 @@ linkTableLinkNameColumn=Nom du lien
 linkTableLinkReferenceColumn=Référence du lien
 actionTableColumn=Nom de l'action
 actionTableActionColumn=Action
+
+selectPassageToAddLink=Vous devez sélectionner un passage pour y ajouter un lien.
+selectLinkToAddAction=Vous devez sélectionner un lien pour y ajouter une action.
+selectPassageOrLinkOrActionToEdit=Vous devez sélectionner un passage, un lien ou une action pour le modifier.
+warning=Avertissement
+confirmation=Confirmation
+
+title=Titre :
+description=Description :
+areYouSurePassage=Êtes-vous sûr de vouloir supprimer ce passage ?
+areYouSureLink=Êtes-vous sûr de vouloir supprimer ce lien ?
+areYouSureAction=Êtes-vous sûr de vouloir supprimer cette action ?
