--- a/src/main/resources/languages/editStoryView_no_NO.properties
+++ b/src/main/resources/languages/editStoryView_no_NO.properties
@@ -11,3 +11,15 @@ linkTableLinkNameColumn=Lenkenavn
 linkTableLinkReferenceColumn=Lenkereferanse
 actionTableColumn=Handlingens navn
 actionTableActionColumn=Handling
+
+selectPassageToAddLink=Du må velge en passasje for å legge til en lenke.
+selectLinkToAddAction=Du må velge en lenke for å legge til en handling.
+selectPassageOrLinkOrActionToEdit=Du må velge en passasje, lenke eller handling for å redigere den.
+warning=Advarsel
+confirmation=Bekreftelse
+
+title=Tittel:
+description=Beskrivelse:
+areYouSurePassage=Er du sikker på at du vil slette denne passasjen?
+areYouSureLink=Er du sikker på at du vil slette denne lenken?
+areYouSureAction=Er du sikker på at du vil slette denne handlingen?
