--- a/src/main/resources/languages/loadGameDialog_fr_FR.properties
+++ b/src/main/resources/languages/loadGameDialog_fr_FR.properties
@@ -3,3 +3,6 @@ loadGameTableDate=Heure de sauvegarde
 loadGameTablePlayer=Joueur
 loadGameButton=Charger
 backToMainMenuButton=qui
+
+noGameSelectedError=Veuillez sélectionner un jeu à charger.
+loadGameErrorTitle=Erreur.
