--- a/src/main/resources/languages/loadGameDialog_no_NO.properties
+++ b/src/main/resources/languages/loadGameDialog_no_NO.properties
@@ -3,3 +3,6 @@ loadGameTableDate=Tidspunkt på lagring
 loadGameTablePlayer=Spiller Navn
 loadGameButton=Last Inn
 backToMainMenuButton=Tilbake
+
+noGameSelectedError=Vennligst velg et spill å laste inn.
+loadGameErrorTitle=Feil.
