--- a/src/main/resources/languages/newStoryDialog.properties
+++ b/src/main/resources/languages/newStoryDialog.properties
@@ -4,3 +4,6 @@ createNewStory.labelOpeningPassage=null
 createNewStory.labelPassageContent=null
 createNewStory.confirmButton=null
 createNewStory.backButton=null
+
+warning=null
+createNewStory.warningMessage=Please fill out all fields and they cant be empty or blank
