--- a/src/main/resources/languages/newStoryDialog_de_DE.properties
+++ b/src/main/resources/languages/newStoryDialog_de_DE.properties
@@ -4,3 +4,6 @@ createNewStory.labelOpeningPassage=Eröffnungspassage in Geschichte
 createNewStory.labelPassageContent=Inhalt im Abschnitt
 createNewStory.confirmButton=Bestätigen
 createNewStory.backButton=Abbrechen
+
+warning=Warnung
+createNewStory.warningMessage=Bitte füllen Sie alle Felder aus. Sie dürfen nicht leer oder blank sein.
