--- a/src/main/resources/languages/newStoryDialog_fr_FR.properties
+++ b/src/main/resources/languages/newStoryDialog_fr_FR.properties
@@ -4,3 +4,6 @@ createNewStory.labelOpeningPassage=Passage d'ouverture dans l'histoire
 createNewStory.labelPassageContent=Contenu du passage
 createNewStory.confirmButton=Confirmer
 createNewStory.backButton=Annuler
+
+warning=Avertissement
+createNewStory.warningMessage=Veuillez remplir tous les champs. Ils ne peuvent pas être vides ou blancs.
