--- a/src/main/resources/languages/newStoryDialog_no_NO.properties
+++ b/src/main/resources/languages/newStoryDialog_no_NO.properties
@@ -4,3 +4,6 @@ createNewStory.labelOpeningPassage=Åpningspassasje i historien
 createNewStory.labelPassageContent=Innhold i passasjen
 createNewStory.confirmButton=Bekreft
 createNewStory.backButton=Avbryt
+
+warning=Advarsel
+createNewStory.warningMessage=Vennligst fyll ut alle feltene. De kan ikke være tomme eller blanke.
