--- a/src/main/resources/languages/createStoryView_no_NO.properties
+++ b/src/main/resources/languages/createStoryView_no_NO.properties
@@ -5,3 +5,6 @@ newStoryView.newStoryButton=Ny historie
 newStoryView.editStoryButton=Rediger historie
 newStoryView.loadStoryButton=Last inn historie
 newStoryView.backButton=Tilbake
+
+error_select_story=Vennligst velg en historie for å redigere den.
+error=Feil
