--- a/src/main/resources/languages/editStoryView_en_US.properties
+++ b/src/main/resources/languages/editStoryView_en_US.properties
@@ -11,3 +11,15 @@ linkTableLinkNameColumn=Link Name
 linkTableLinkReferenceColumn=Link Reference
 actionTableColumn=Action Name
 actionTableActionColumn=Action
+
+selectPassageToAddLink=You have to select a passage to add a link to it.
+selectLinkToAddAction=You have to select a link to add an action to it.
+selectPassageOrLinkOrActionToEdit=You have to select a passage, link or action to edit it.
+warning=Warning
+confirmation=Confirmation
+
+title=Title:
+description=Description:
+areYouSurePassage=Are you sure you want to delete this passage?
+areYouSureLink=Are you sure you want to delete this link?
+areYouSureAction=Are you sure you want to delete this action?
