--- a/src/main/resources/languages/loadGameDialog.properties
+++ b/src/main/resources/languages/loadGameDialog.properties
@@ -3,3 +3,6 @@ loadGameTableDate=null
 loadGameTablePlayer=null
 loadGameButton=null
 backToMainMenuButton=null
+
+noGameSelectedError=null
+loadGameErrorTitle=null
