--- a/src/main/resources/languages/loadGameDialog_de_DE.properties
+++ b/src/main/resources/languages/loadGameDialog_de_DE.properties
@@ -3,3 +3,6 @@ loadGameTableDate=Zeit des Speicherns
 loadGameTablePlayer=Spieler
 loadGameButton=Laden
 backToMainMenuButton=Zurück
+
+noGameSelectedError=Bitte wählen Sie ein Spiel zum Laden aus.
+loadGameErrorTitle=Fehler.
