--- a/src/main/resources/languages/loadGameDialog_en_US.properties
+++ b/src/main/resources/languages/loadGameDialog_en_US.properties
@@ -3,3 +3,6 @@ loadGameTableDate=Time of Save
 loadGameTablePlayer=Player
 loadGameButton=Load
 backToMainMenuButton=Back
+
+noGameSelectedError=Please select a game to load.
+loadGameErrorTitle=Error.
