--- a/src/main/resources/languages/newStoryDialog_en_US.properties
+++ b/src/main/resources/languages/newStoryDialog_en_US.properties
@@ -4,3 +4,6 @@ createNewStory.labelOpeningPassage=Opening Passage In Story
 createNewStory.labelPassageContent=Content in Passage
 createNewStory.confirmButton=Confirm
 createNewStory.backButton=Cancel
+
+warning=Warning
+createNewStory.warningMessage=Please fill out all fields and they cant be empty or blank
