added bundels for all alerts, added costum alerts fixed some bugs

--- a/src/main/resources/languages/createStoryView_fr_FR.properties
+++ b/src/main/resources/languages/createStoryView_fr_FR.properties
@@ -3,5 +3,8 @@ newStoryView.tablePassageAmount=Nombre de passages dans l'histoire
 newStoryView.tableLinkAmount=Nombre de liens dans l'histoire
 newStoryView.newStoryButton=Nouvelle histoire
 newStoryView.editStoryButton=Modifier l'histoire
-newStoryView.loadStoryButton=histoire importée
+newStoryView.loadStoryButton=Histoire importée
 newStoryView.backButton=Retour
+
+error_select_story=Veuillez sélectionner une histoire pour la modifier.
+error=Erreur
