--- a/src/main/resources/languages/createStoryView_de_DE.properties
+++ b/src/main/resources/languages/createStoryView_de_DE.properties
@@ -5,3 +5,6 @@ newStoryView.newStoryButton=Neue Geschichte
 newStoryView.editStoryButton=Geschichte bearbeiten
 newStoryView.loadStoryButton=Geschichte importieren
 newStoryView.backButton=Zurück
+
+error_select_story=Bitte wählen Sie eine Geschichte aus, um sie zu bearbeiten.
+error=Fehler
