Added delete button resource bundle

--- a/src/main/resources/languages/createStoryView.properties
+++ b/src/main/resources/languages/createStoryView.properties
@@ -3,6 +3,7 @@ newStoryView.tablePassageAmount=null
 newStoryView.tableLinkAmount=null
 newStoryView.newStoryButton=null
 newStoryView.editStoryButton=null
+newStoryView.deleteStoryButton=null
 newStoryView.loadStoryButton=null
 newStoryView.backButton=null
 
