--- a/src/main/resources/languages/createStoryView_de_DE.properties
+++ b/src/main/resources/languages/createStoryView_de_DE.properties
@@ -3,6 +3,7 @@ newStoryView.tablePassageAmount=Anzahl der Abschnitte in der Geschichte
 newStoryView.tableLinkAmount=Anzahl der Verknüpfungen in der Geschichte
 newStoryView.newStoryButton=Neue Geschichte
 newStoryView.editStoryButton=Geschichte bearbeiten
+newStoryView.deleteStoryButton=Geschichte löschen
 newStoryView.loadStoryButton=Geschichte importieren
 newStoryView.backButton=Zurück
 
