--- a/src/main/resources/languages/createStoryView_fr_FR.properties
+++ b/src/main/resources/languages/createStoryView_fr_FR.properties
@@ -3,6 +3,7 @@ newStoryView.tablePassageAmount=Nombre de passages dans l'histoire
 newStoryView.tableLinkAmount=Nombre de liens dans l'histoire
 newStoryView.newStoryButton=Nouvelle histoire
 newStoryView.editStoryButton=Modifier l'histoire
+newStoryView.deleteStoryButton=Supprimer l'histoire
 newStoryView.loadStoryButton=Histoire importée
 newStoryView.backButton=Retour
 
