--- a/src/main/resources/languages/createStoryView_en.properties
+++ b/src/main/resources/languages/createStoryView_en.properties
@@ -3,5 +3,9 @@ newStoryView.tablePassageAmount=Passage Amount in Story
 newStoryView.tableLinkAmount=Link Amounts in Story
 newStoryView.newStoryButton=New Story
 newStoryView.editStoryButton=Edit Story
+newStoryView.deleteStoryButton=Delete Story
 newStoryView.loadStoryButton=Import Story
 newStoryView.backButton=Back
+
+error_select_story=Please Select a Story To Edit It.
+error=Error
