started doing javadoc and checkstyle for front end

--- a/src/main/resources/languages/editStoryView.properties
+++ b/src/main/resources/languages/editStoryView.properties
@@ -16,11 +16,13 @@ selectPassageToAddLink=null
 selectLinkToAddAction=null
 selectPassageOrLinkOrActionToEdit=null
 passageAlreadyLinked=null
+passageAlreadyExists=null
 warning=null
 confirmation=null
 
 title=null
 description=null
+nothingSelected=null
 areYouSurePassage=null
 areYouSureLink=null
 areYouSureAction=null
