--- a/src/main/resources/languages/editStoryView_de_DE.properties
+++ b/src/main/resources/languages/editStoryView_de_DE.properties
@@ -16,11 +16,13 @@ selectPassageToAddLink=Sie müssen eine Passage auswählen, um einen Link hinzuzuf
 selectLinkToAddAction=Sie müssen einen Link auswählen, um eine Aktion hinzuzufügen.
 selectPassageOrLinkOrActionToEdit=Sie müssen eine Passage, einen Link oder eine Aktion auswählen, um sie zu bearbeiten.
 passageAlreadyLinked=Dieser Abschnitt hat bereits einen Link zum ausgewählten Abschnitt.
+passageAlreadyExists=Dieser Titel für den Abschnitt existiert bereits.
 warning=Warnung
 confirmation=Bestätigung
 
 title=Titel:
 description=Beschreibung:
+nothingSelected=Sie müssen etwas auswählen, um es zu löschen.
 areYouSurePassage=Sind Sie sicher, dass Sie diese Passage löschen möchten?
 areYouSureLink=Sind Sie sicher, dass Sie diesen Link löschen möchten?
 areYouSureAction=Sind Sie sicher, dass Sie diese Aktion löschen möchten?
