--- a/src/main/resources/languages/editStoryView_no_NO.properties
+++ b/src/main/resources/languages/editStoryView_no_NO.properties
@@ -16,11 +16,13 @@ selectPassageToAddLink=Du må velge en passasje for å legge til en lenke.
 selectLinkToAddAction=Du må velge en lenke for å legge til en handling.
 selectPassageOrLinkOrActionToEdit=Du må velge en passasje, lenke eller handling for å redigere den.
 passageAlreadyLinked=Denne passasjen er allerede koblet til den valgte passasjen.
+passageAlreadyExists=Denne passasjens tittel finnes allerede fra før.
 warning=Advarsel
 confirmation=Bekreftelse
 
 title=Tittel:
 description=Beskrivelse:
+nothingSelected=Du må velge noe for å slette det.
 areYouSurePassage=Er du sikker på at du vil slette denne passasjen?
 areYouSureLink=Er du sikker på at du vil slette denne lenken?
 areYouSureAction=Er du sikker på at du vil slette denne handlingen?
