--- a/src/main/resources/languages/editStoryView_en_US.properties
+++ b/src/main/resources/languages/editStoryView_en_US.properties
@@ -16,11 +16,13 @@ selectPassageToAddLink=You have to select a passage to add a link to it.
 selectLinkToAddAction=You have to select a link to add an action to it.
 selectPassageOrLinkOrActionToEdit=You have to select a passage, link or action to edit it.
 passageAlreadyLinked=This passage already have a link to the selected passage.
+passageAlreadyExists=This Passage Title Already Exists.
 warning=Warning
 confirmation=Confirmation
 
 title=Title:
 description=Description:
+nothingSelected=You Have to Select Something to Delete it.
 areYouSurePassage=Are you sure you want to delete this passage?
 areYouSureLink=Are you sure you want to delete this link?
 areYouSureAction=Are you sure you want to delete this action?
