--- a/src/main/resources/languages/editStoryView_fr_FR.properties
+++ b/src/main/resources/languages/editStoryView_fr_FR.properties
@@ -16,11 +16,13 @@ selectPassageToAddLink=Vous devez sélectionner un passage pour y ajouter un lien
 selectLinkToAddAction=Vous devez sélectionner un lien pour y ajouter une action.
 selectPassageOrLinkOrActionToEdit=Vous devez sélectionner un passage, un lien ou une action pour le modifier.
 passageAlreadyLinked=Ce passage est déjà lié au passage sélectionné.
+passageAlreadyExists=Ce titre de passage existe déjà.
 warning=Avertissement
 confirmation=Confirmation
 
 title=Titre :
 description=Description :
+nothingSelected=Vous devez sélectionner quelque chose pour le supprimer.
 areYouSurePassage=Êtes-vous sûr de vouloir supprimer ce passage ?
 areYouSureLink=Êtes-vous sûr de vouloir supprimer ce lien ?
 areYouSureAction=Êtes-vous sûr de vouloir supprimer cette action ?
