Added delete button resource bundle

--- a/src/main/resources/languages/loadGameDialog.properties
+++ b/src/main/resources/languages/loadGameDialog.properties
@@ -2,6 +2,7 @@ loadGameTableName=null
 loadGameTableDate=null
 loadGameTablePlayer=null
 loadGameButton=null
+deleteGameButton=null
 backToMainMenuButton=null
 
 noGameSelectedError=null
