--- a/src/main/resources/languages/loadGameDialog_de_DE.properties
+++ b/src/main/resources/languages/loadGameDialog_de_DE.properties
@@ -2,6 +2,7 @@ loadGameTableName=Geschichte
 loadGameTableDate=Zeit des Speicherns
 loadGameTablePlayer=Spieler
 loadGameButton=Laden
+deleteGameButton=Löschen
 backToMainMenuButton=Zurück
 
 noGameSelectedError=Bitte wählen Sie ein Spiel zum Laden aus.
