--- a/src/main/resources/languages/loadGameDialog_en.properties
+++ b/src/main/resources/languages/loadGameDialog_en.properties
@@ -2,6 +2,7 @@ loadGameTableName=Story
 loadGameTableDate=Time of Save
 loadGameTablePlayer=Player
 loadGameButton=Load
+deleteGameButton=Delete
 backToMainMenuButton=Back
 
 noGameSelectedError=Please select a game to load.
