--- a/src/main/resources/languages/loadGameDialog_fr_FR.properties
+++ b/src/main/resources/languages/loadGameDialog_fr_FR.properties
@@ -2,6 +2,7 @@ loadGameTableName=Histoire
 loadGameTableDate=Heure de sauvegarde
 loadGameTablePlayer=Joueur
 loadGameButton=Charger
+deleteGameButton=Supprimer
 backToMainMenuButton=qui
 
 noGameSelectedError=Veuillez sélectionner un jeu à charger.
