--- a/src/main/resources/languages/loadGameDialog_no_NO.properties
+++ b/src/main/resources/languages/loadGameDialog_no_NO.properties
@@ -2,6 +2,7 @@ loadGameTableName=Historie
 loadGameTableDate=Tidspunkt på lagring
 loadGameTablePlayer=Spiller Navn
 loadGameButton=Last Inn
+deleteGameButton=Slett
 backToMainMenuButton=Tilbake
 
 noGameSelectedError=Vennligst velg et spill å laste inn.
