Resource bundle for delete button

--- a/src/main/resources/languages/loadGameDialog_de_DE.properties
+++ b/src/main/resources/languages/loadGameDialog_de_DE.properties
@@ -5,5 +5,5 @@ loadGameButton=Laden
 deleteGameButton=Löschen
 backToMainMenuButton=Zurück
 
-noGameSelectedError=Bitte wählen Sie ein Spiel zum Laden aus.
+noGameSelectedError=Bitte wählen Sie ein Spiel.
 loadGameErrorTitle=Fehler.
