--- a/src/main/resources/languages/loadGameDialog_fr_FR.properties
+++ b/src/main/resources/languages/loadGameDialog_fr_FR.properties
@@ -5,5 +5,5 @@ loadGameButton=Charger
 deleteGameButton=Supprimer
 backToMainMenuButton=qui
 
-noGameSelectedError=Veuillez sélectionner un jeu à charger.
+noGameSelectedError=Veuillez sélectionner un jeu.
 loadGameErrorTitle=Erreur.
