--- a/src/main/resources/languages/loadGameDialog_no_NO.properties
+++ b/src/main/resources/languages/loadGameDialog_no_NO.properties
@@ -5,5 +5,5 @@ loadGameButton=Last Inn
 deleteGameButton=Slett
 backToMainMenuButton=Tilbake
 
-noGameSelectedError=Vennligst velg et spill å laste inn.
+noGameSelectedError=Vennligst velg et spill.
 loadGameErrorTitle=Feil.
