--- a/src/main/resources/languages/loadGameDialog_en_US.properties
+++ b/src/main/resources/languages/loadGameDialog_en_US.properties
@@ -5,5 +5,5 @@ loadGameButton=Load
 deleteGameButton=Delete
 backToMainMenuButton=Back
 
-noGameSelectedError=Please select a game to load.
+noGameSelectedError=Please select a game.
 loadGameErrorTitle=Error.
