started editing on newGameView

--- a/src/main/resources/languages/startNewGameView.properties
+++ b/src/main/resources/languages/startNewGameView.properties
@@ -6,6 +6,7 @@ startNewGame.classType.mage=null
 startNewGame.classType.rogue=null
 startNewGame.classType.warrior=null
 startNewGame.classType.ranger=null
+startNewGame.classType.custom=null
 startNewGame.goals=null
 startNewGame.health=null
 startNewGame.gold=null
