--- a/src/main/resources/languages/startNewGameView_de_DE.properties
+++ b/src/main/resources/languages/startNewGameView_de_DE.properties
@@ -6,6 +6,7 @@ startNewGame.classType.mage=Magier
 startNewGame.classType.rogue=Schurke
 startNewGame.classType.warrior=Krieger
 startNewGame.classType.ranger=Bogenschütze
+startNewGame.classType.custom=Custum
 startNewGame.goals=Ziele
 startNewGame.health=Gesundheit
 startNewGame.gold=Gold
