--- a/src/main/resources/languages/startNewGameView_en.properties
+++ b/src/main/resources/languages/startNewGameView_en.properties
@@ -6,6 +6,7 @@ startNewGame.classType.mage=Mage
 startNewGame.classType.rogue=Rogue
 startNewGame.classType.warrior=Warrior
 startNewGame.classType.ranger=Ranger
+startNewGame.classType.custom=Custom
 startNewGame.goals=Goals
 startNewGame.health=Health
 startNewGame.gold=Gold
