--- a/src/main/resources/languages/startNewGameView_fr_FR.properties
+++ b/src/main/resources/languages/startNewGameView_fr_FR.properties
@@ -6,6 +6,7 @@ startNewGame.classType.mage=Mage
 startNewGame.classType.rogue=Voleur
 startNewGame.classType.warrior=Guerrier
 startNewGame.classType.ranger=Archer
+startNewGame.classType.custom=Personnalisé
 startNewGame.goals=Objectifs
 startNewGame.health=Santé
 startNewGame.gold=Or
