--- a/src/main/resources/languages/startNewGameView_no_NO.properties
+++ b/src/main/resources/languages/startNewGameView_no_NO.properties
@@ -6,6 +6,7 @@ startNewGame.classType.mage=Magiker
 startNewGame.classType.rogue=Tyv
 startNewGame.classType.warrior=Kriger
 startNewGame.classType.ranger=Bueskytter
+startNewGame.classType.custom=Spesial
 startNewGame.goals=Mål
 startNewGame.health=Helse
 startNewGame.gold=Gull
